--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
     id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
     id 'checkstyle'
+    id 'org.checkerframework' version '0.6.28'
 }
 
 group = 'flab'
@@ -23,11 +24,17 @@ repositories {
 dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4'
 
     // data
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
+
 
     runtimeOnly 'com.mysql:mysql-connector-j'
 
