refactor : reflecting pr feedback
1. build.gradle annotation for spring boot init
2. delete unnecessary annotations(@Componentscan)
3. using ThreadLocalRandom instead of Random
4. change core/data/BaseEntity
5. change core/utils/IpUtil

--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,13 @@ repositories {
 
 dependencies {
 
+    // spring boot init
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // log
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4'
 
     // data
