refactor : update application.yml for gracefulshutdown

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,9 @@ spring:
           ssl:
             enable: true
             trust: ${SMTP_HOST}
+server:
+  shutdown: graceful
+
 logging:
   level:
     root: debug
