refactor : resolve timezone issue
change db timezone and baseentity type to OffsetDateTime for multinational service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
     dispatch-options-request: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DB_URL}/${DB_DATABASE}?useUnicode=true&characterEncoding=utf8&serverTimezone=${TIMEZONE}&useLegacyDatetimeCode=false
+    # 다국적 서비스 사용 대비를 위해 database(mysql) server timezone 은 utc, 애플리케이션 단에서 kst OffsetDateTime or ZoneDateTime 타입 사용
+    url: ${DB_URL}/${DB_DATABASE}?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useLegacyDatetimeCode=false
     username: ${DB_USER}
     password: ${DB_PASSWORD}
   jpa:
