feat : add logging system for save db

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,7 @@ server:
 logging:
   level:
     root: info
+  config: classpath:log4j2-${spring.profiles.active}.xml
 
 timezone: ${TIMEZONE}
 smtp-id: ${SMTP_ID}
