refactor : refactoring test code
1. import Asserstions and using assert+@ method
2. using Constructor Injection
3. add before test, databaseCleanUp

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -47,5 +47,6 @@ kakao-adminkey: ${KAKAO_ADMIN_KEY}
 toss-host: https://api.tosspayments.com/v1/payments
 toss-client-key: ${TOSS_CLIENT_KEY}
 toss-secret-key: ${TOSS_SECRET_KEY}
+test-url : ${TEST_URL}
 
 
