--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.session:spring-session-data-redis'
     implementation 'org.redisson:redisson-spring-boot-starter:3.21.1'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
 
     // jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
