fix : using caching for getProductList API

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -30,6 +30,9 @@ spring:
           ssl:
             enable: true
             trust: ${SMTP_HOST}
+  cache:
+    type: redis
+
 server:
   shutdown: graceful
 
