--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,9 @@ spring:
             trust: ${SMTP_HOST}
   cache:
     type: redis
+  batch:
+    jdbc:
+      initialize-schema: always
 
 server:
   shutdown: graceful
