refactor: refactor batch business logic

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,7 +55,7 @@ kakao-cid: TC0ONETIME
 kakao-host: https://kapi.kakao.com/v1/payment
 kakao-adminkey: ${KAKAO_ADMIN_KEY}
 
-toss-host: https://api.tosspayments.com/v1/payments
+toss-host: https://api.tosspayments.com/v1
 toss-client-key: ${TOSS_CLIENT_KEY}
 toss-secret-key: ${TOSS_SECRET_KEY}
 compensation-path: ${COMPENSATION_PATH}
